[package]
name = "purl_validator"
version = "0.1.0"
edition = "2024"
authors = ["Keshav Priyadarshi <git@keshav.space>", "AboutCode <info@aboutcode.org>"]
description = "PackageURL validator using prebuilt FST"
license = "Apache-2.0"
repository = "https://github.com/aboutcode-org/purl-validator"

[lib]
name = "purl_validator"
crate-type = ["cdylib", "rlib"]

[dependencies]
fst = "0.4.7"
once_cell = "1.21"
pyo3 = { version = "0.27.1", features = ["extension-module"] }

[[bin]]
name = "fst_builder"
path = "fst_builder/main.rs"

include = [
    "src/**",
    "purls.fst",
    "Cargo.toml",
    "README.md",
    "LICENSE"
]

[package.metadata.maturin]
name = "purl_validator"

[tool.maturin]
include = ["purls.fst"]
